name:                pcf
version:             0.1.0.0
synopsis:            A one file compiler for PCF
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  exposed-modules:     Pcf
  build-depends:       base >=4.0 && <5
                     , bound
                     , containers
                     , c-dsl
                     , monad-gen
                     , mtl
                     , prelude-extras
                     , void
  default-language:    Haskell2010
